refactor : Car Names 를 받는 기능의 예외 처리를 보강